End-to-end test finished. CI script improvements for local running and failure

--- a/src/app/meta/meta-sender/meta-sender.component.html
+++ b/src/app/meta/meta-sender/meta-sender.component.html
@@ -3,7 +3,7 @@
   <option *ngFor="let account of accounts" >{{account}}</option>
 </select>
 <h2>Example Truffle Dapp</h2>
-<h3>You have {{model.balance}} META</h3>
+<h3>You have <span id="balance">{{model.balance}}</span> META</h3>
 
 <br>
 <h1>Send MetaCoin</h1>
