--- a/src/app/meta/meta-sender/meta-sender.component.html
+++ b/src/app/meta/meta-sender/meta-sender.component.html
@@ -1,14 +1,30 @@
-<h1>MetaCoin</h1>
-<select name="account" (change)="clickAddress($event)">
-  <option *ngFor="let account of accounts" >{{account}}</option>
-</select>
-<h2>Example Truffle Dapp</h2>
-<h3>You have <span id="balance">{{model.balance}}</span> META</h3>
 
-<br>
-<h1>Send MetaCoin</h1>
-<br><label for="amount">Amount:</label><input type="text" id="amount" placeholder="e.g., 95" (change)="setAmount($event)">
-<br><label for="receiver">To Address:</label><input type="text" id="receiver" placeholder="e.g., 0x93e66d9baea28c17d9fc393b53e3fbdd76899dae" (change)="setReceiver($event)">
-<br><br><button id="send" (click)="sendCoin()">Send MetaCoin</button>
-<br><br>
+<mat-card>
+  <mat-card-header>Balance</mat-card-header>
+  <mat-card-content>
+    <mat-form-field>
+      <mat-select name="account" (change)="refreshBalance()" [(value)]="model.account">
+        <mat-option *ngFor="let account of accounts" value=account>{{account}}</mat-option>
+      </mat-select>
+    </mat-form-field>
+
+    <p>You have <span id="balance">{{model.balance}}</span> META</p>
+  </mat-card-content>
+</mat-card>
+
+<mat-card>
+  <mat-card-header>Send MetaCoin</mat-card-header>
+  <mat-card-content>
+    <mat-form-field>
+      <input type="text" matInput id="amount" placeholder="Amount" (change)="setAmount($event)">
+    </mat-form-field>
+    <mat-form-field>
+      <input type="text" matInput id="receiver" placeholder="Receiver Address" (change)="setReceiver($event)">
+    </mat-form-field>
+    <button mat-button id="send" (click)="sendCoin()">Send MetaCoin</button>
+  </mat-card-content>
+</mat-card>
+
 <span id="status">{{status}}</span>
+
+
