--- a/src/app/meta/meta-sender/meta-sender.component.html
+++ b/src/app/meta/meta-sender/meta-sender.component.html
@@ -1,10 +1,9 @@
-
 <mat-card>
   <mat-card-header>Balance</mat-card-header>
   <mat-card-content>
-    <mat-form-field>
-      <mat-select name="account" (change)="refreshBalance()" [(value)]="model.account">
-        <mat-option *ngFor="let account of accounts" value=account>{{account}}</mat-option>
+    <mat-form-field id="address-selector" class="address-field">
+      <mat-select name="account" (selectionChange)="refreshBalance()" [(value)]="model.account" placeholder="Address">
+        <mat-option *ngFor="let account of accounts" [value]="account">{{account}}</mat-option>
       </mat-select>
     </mat-form-field>
 
@@ -18,7 +17,7 @@
     <mat-form-field>
       <input type="text" matInput id="amount" placeholder="Amount" (change)="setAmount($event)">
     </mat-form-field>
-    <mat-form-field>
+    <mat-form-field class="address-field">
       <input type="text" matInput id="receiver" placeholder="Receiver Address" (change)="setReceiver($event)">
     </mat-form-field>
     <button mat-button id="send" (click)="sendCoin()">Send MetaCoin</button>
